--- a/Contents/front/static/css/main.css
+++ b/Contents/front/static/css/main.css
@@ -1,5 +1,22 @@
-body {
-  margin: 0px;
+@charset "UTF-8";
+@font-face {
+  font-family: "03スマートフォントUI";
+  src: url("font/03スマートフォントUI.otf") format("opentype");
+}
+@font-face {
+  font-family: "NAGOMIGOKUBOSOGOTHIC-EXTRALIGHT";
+  src: url("font/NAGOMIGOKUBOSOGOTHIC-EXTRALIGHT.otf") format("opentype");
+}
+.a-Btn-Base {
+  min-width: 180px;
+  min-height: 40px;
+  background-color: rgb(16, 16, 16);
+  color: rgb(200, 200, 200);
+}
+
+.m-Main {
+  background-color: rgb(0, 0, 0);
+  font-family: "03スマートフォントUI";
 }
 
 .u-Head {
@@ -8,22 +25,104 @@ body {
   min-height: 80px;
 }
 .u-Head .c-Link-Wrapper {
+  position: absolute;
   margin: 0px;
-  font-size: 140%;
+  font-size: 80%;
   padding: 20px;
 }
 .u-Head .c-Wrapper-Btn-For-Move {
   position: absolute;
-  top: 20px;
+  top: 40px;
   right: 10%;
 }
 
 .u-Massage-Wrapper {
   margin: 10px;
-  color: blue;
+  color: rgb(0, 249, 166);
 }
 
-.u-List-Unit {
+.u-Body-List {
+  position: relative;
+  text-align: center;
+  max-width: 1200px;
+  min-height: 850px;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: rgb(42, 42, 42);
+  color: rgb(164, 164, 164);
+}
+.u-Body-List .c-Container-List {
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+.u-Body-List .c-Container-List ::-webkit-scrollbar {
+  display: none;
+}
+.u-Body-List .c-Container-List .c-Inner-ListCards {
+  overflow-y: scroll;
+  margin: 20px;
+  height: 550px;
+}
+.u-Body-List .c-Container-List .c-Inner-ListCards .a-Card {
+  min-width: 350px;
+  min-height: 45px;
+  margin: 10px;
+  font-size: 120%;
+  background-color: rgb(16, 16, 16);
+  color: rgb(200, 200, 200);
+}
+.u-Body-List .c-Container-List .c-Inner-ListCards .a-Separator {
+  min-width: 370px;
+  min-height: 45px;
+  margin: 10px;
+  font-size: 120%;
+  background-color: rgb(200, 200, 200);
+  color: rgb(16, 16, 16);
+}
+.u-Body-List .c-Container-List .c-Wrapper-Note {
+  position: relative;
+  overflow: hidden;
+  margin: 20px;
+  width: 400px;
+  background-color: rgb(16, 16, 16);
+  color: rgb(200, 200, 200);
+}
+.u-Body-List .c-Container-List .c-Wrapper-Note .c-Inner-Note {
+  margin: 20px;
+  display: block;
+}
+.u-Body-List .c-Container-List .c-Wrapper-Note .c-Inner-Note .a-title {
+  font-size: 140%;
+}
+.u-Body-List .c-Container-List .c-Wrapper-Note .c-Inner-Note input {
+  min-width: 180px;
+  min-height: 40px;
+  background-color: rgb(16, 16, 16);
+  color: rgb(200, 200, 200);
+}
+.u-Body-List .c-Container-List .c-Wrapper-Note .c-Inner-Note textarea {
+  white-space: pre-wrap;
+  min-width: 300px;
+  min-height: 400px;
+  font-size: 100%;
+  background-color: rgb(34, 34, 34);
+  color: rgb(0, 249, 166);
+}
+.u-Body-List .c-Wrapper-ListCategory {
+  position: relative;
+}
+.u-Body-List .c-Wrapper-ListCategory .a-Category {
+  margin: 10px;
+  min-width: 400px;
+  min-height: 45px;
+  background-color: rgb(16, 16, 16);
+  color: rgb(200, 200, 200);
+}
+
+.u-Body-Forms {
+  position: relative;
   text-align: center;
   max-width: 1200px;
   min-height: 1500px;
@@ -31,77 +130,43 @@ body {
   margin-left: auto;
   background-color: rgb(42, 42, 42);
   color: rgb(164, 164, 164);
-  position: relative;
 }
-.u-List-Unit .c-Wrapper-ListCards {
-  position: absolute;
-  margin-left: 15%;
-  max-width: 500px;
-}
-.u-List-Unit .c-Wrapper-ListCards .a-Card {
-  min-width: 350px;
-  min-height: 15px;
-  margin: 5px;
-  font-size: 80%;
-  background-color: rgb(16, 16, 16);
-  color: rgb(200, 200, 200);
-}
-.u-List-Unit .c-Wrapper-ListCards .a-Separator {
-  min-width: 350px;
-  min-height: 15px;
-  margin: 5px;
-  background-color: rgb(218, 218, 218);
-  color: rgb(28, 28, 28);
-}
-.u-List-Unit .c-Wrapper-ListCategory {
-  position: relative;
-}
-.u-List-Unit .c-Wrapper-ListCategory .a-Category {
-  margin: 10px;
-  min-width: 400px;
-  min-height: 15px;
-  background-color: rgb(16, 16, 16);
-  color: rgb(200, 200, 200);
-}
-.u-List-Unit .c-Wrapper-Note {
-  float: right;
-  position: relative;
-  margin-right: 15%;
-  min-width: 400px;
-  min-height: 550px;
-  background-color: rgb(16, 16, 16);
-  color: rgb(200, 200, 200);
-}
-.u-List-Unit .c-Wrapper-Note .c-Note-Inner .a-title {
-  margin: 20px;
-  font-size: 120%;
-}
-.u-List-Unit .c-Wrapper-Note .c-Note-Inner .a-Note-Content {
-  white-space: pre-wrap;
-  min-width: 300px;
-  min-height: 400px;
-}
-
-.u-Input-Form-Wrapper {
+.u-Body-Forms .c-Wrapper-Post-Put .c-Container-Form {
+  display: inline-block;
+  vertical-align: top;
   margin: 10px;
 }
-.u-Input-Form-Wrapper .c-Input-Form-Inner textarea {
+.u-Body-Forms .c-Wrapper-Post-Put .c-Container-Form textarea {
   min-width: 400px;
   min-height: 100px;
+  background-color: rgb(34, 34, 34);
+  color: rgb(255, 255, 255);
 }
-.u-Input-Form-Wrapper .c-Input-Form-Inner input {
+.u-Body-Forms .c-Wrapper-Post-Put .c-Container-Form input {
   min-width: 400px;
   min-height: 20px;
+  background-color: rgb(34, 34, 34);
+  color: rgb(255, 255, 255);
 }
-.u-Input-Form-Wrapper .a-Sort {
-  max-width: 50px;
+.u-Body-Forms .c-Wrapper-Post-Put .c-Container-Sub-Form input {
+  max-width: 30px;
   min-height: 20px;
+  background-color: rgb(34, 34, 34);
+  color: rgb(255, 255, 255);
 }
-.u-Input-Form-Wrapper .a-Input-Btn {
-  min-width: 100px;
+.u-Body-Forms .c-Wrapper-Post-Put .c-Container-Sub-Form input[type=checkbox] {
+  margin-right: 15px;
+  transform: scale(2);
+}
+.u-Body-Forms .c-Wrapper-Post-Put .c-Container-Sub-Form select {
+  min-width: 150px;
   min-height: 20px;
+  background-color: rgb(34, 34, 34);
+  color: rgb(255, 255, 255);
 }
-
-.c-Wrapper-Btn-Bottom {
-  margin: 30px;
+.u-Body-Forms .c-Wrapper-Post-Put .a-Btn-Delete {
+  min-width: 180px;
+  min-height: 40px;
+  background-color: rgb(75, 20, 20);
+  color: rgb(200, 200, 200);
 }/*# sourceMappingURL=main.css.map */
