--- a/Contents/front/templates/large_category.html
+++ b/Contents/front/templates/large_category.html
@@ -6,18 +6,20 @@
   </head>
 
   <body>
-    <main class="u-List-Unit">
-      
-      <div id="js-Header"></div>
+    <main class="m-Main">
+      <div class="u-Body-List">
+        
+        <div id="js-Header"></div>
 
-      <div class="u-Massage-Wrapper">
-        <p>{{message}}</p>
+        <div class="u-Massage-Wrapper">
+          <p>{{message}}</p>
+        </div>
+
+        <div id="js-Data-Wrapper-ListLargeCategory" class="c-Wrapper-ListCategory"></div>
+
+        <div id="js-Footer"></div>
+        
       </div>
-
-      <div id="js-Data-Wrapper-ListLargeCategory" class="c-Wrapper-ListCategory"></div>
-
-      <div id="js-Footer"></div>
-
     </main>
   </body>
 
