--- a/Contents/front/templates/post_card.html
+++ b/Contents/front/templates/post_card.html
@@ -6,80 +6,95 @@
   </head>
 
   <body>
-    <main class="u-List-Unit">
+    <main class="m-Main">
+      <div class="u-Body-Forms">
       
-      <div>
-        <link rel="stylesheet" href="http://localhost:5005/static/css/main.css">
-        <link rel="stylesheet" href="http://localhost:5005/static/js/main.js">
-      
-        <!-- Required meta tags -->
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-      
-        <!-- Bootstrap CSS -->
-        <link href="http://localhost:5005/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-      
-        <title>Hello, world!</title>
-      </div>        
+        <div>
+          <link rel="stylesheet" href="http://localhost:5005/static/css/main.css">
+          <link rel="stylesheet" href="http://localhost:5005/static/js/main.js">
+        
+          <!-- Required meta tags -->
+          <meta charset="UTF-8">
+          <meta name="viewport" content="width=device-width, initial-scale=1">
+        
+          <!-- Bootstrap CSS -->
+          <link href="http://localhost:5005/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        
+          <title>Hello, world!</title>
+        </div>        
 
-      <div id="js-Header-Post">
-        <div class="u-Head">
-          <div class="c-Link-Wrapper">
-            <a>単語作成</a>
-          </div>
-          <div class="c-Wrapper-Btn-For-Move">
-            <form action="/large_list/get_list" method="get">
-              <p><input type="submit" value="ホームに戻る"/></p>
-            </form>
+        <div id="js-Header-Post">
+          <div class="u-Head">
+            <div class="c-Link-Wrapper">
+              <a>単語作成</a>
+            </div>
+            <div class="c-Wrapper-Btn-For-Move">
+              <form action="/large_list/get_list" method="get">
+                <p><input class="a-Btn-Base" type="submit" value="HOME"/></p>
+              </form>
+            </div>
           </div>
         </div>
-      </div>
-      
-      <div class="u-Massage-Wrapper">
-        <p>{{message}}</p>
-      </div>
+        
+        <div class="u-Massage-Wrapper">
+          <p>{{message}}</p>
+        </div>
 
-      <div class="u-Input-Form-Wrapper">
-        <form action="insert" method="post">
-          <p><label>しおりを作る: <input type="checkbox" id="js-Check" class="a-check" name="is_separator"></label></p>
-          <div class="c-Input-Form-Inner">
-            <p><label><input type="text" placeholder="単語を入力" name="card_name"></label></p>
-            <p><label>
-              <input type="text" list="l-Large" id="a-Large" value="" placeholder="大分類を入力" name="large_category_name">
-                <datalist id="l-Large">
-                </datalist>
-            </label></p>
-            <p><label>
-              <input type="text" list="l-Small" id="a-Small" value="" placeholder="小分類を入力" name="small_category_name">
-                <datalist id="l-Small">
-                </datalist>
-            </label></p>
-            <p><label><textarea name="note_content" placeholder="ノートを入力"></textarea></label></p>
-            <p><label>重要度: <select name="significance">
-              <option value="1">★</option>
-              <option value="2">★★</option>
-              <option value="3" selected>★★★</option>
-              <option value="4">★★★★</option>
-              <option value="5">★★★★★</option>
-              </select></label></p>
-            <p><label>学習状況: <select name="study_state">
-              <option value="0">苦手</option>
-              <option value="1" selected>学習中</option>
-              <option value="2">得意</option>
-              <option value="3">完璧</option>
-              </select></label></p> 
-            <p><label><input type="text" placeholder="タグ1を入力" name="tag_name_0"></label></p>
-            <p><label><input type="text" placeholder="タグ2を入力" name="tag_name_1"></label></p>
-            <p><label><input type="text" placeholder="タグ3を入力" name="tag_name_2"></label></p>
-            <p><label><input type="text" placeholder="タグ4を入力" name="tag_name_3"></label></p>
-            <p><label><input type="text" placeholder="タグ5を入力" name="tag_name_4"></label></p>
-          </div>
-          <p><input type="submit" class="a-Input-Btn" value="作成"/></p>
-        </form>
+        <div class="c-Wrapper-Post-Put">
+          <form action="insert" method="post">
+
+            <div class="c-Input-Form-Inner">
+              <div class="c-Container-Sub-Form">
+                <p><label><input type="checkbox" id="js-Check" class="a-check" name="is_separator" size="20">create as "separator"</label></p>
+                <p><label><select name="significance">
+                  <option value="1">★</option>
+                  <option value="2">★★</option>
+                  <option value="3" selected>★★★</option>
+                  <option value="4">★★★★</option>
+                  <option value="5">★★★★★</option>
+                  </select></label></p>
+                <p><label><select name="study_state">
+                  <option value="0">苦手</option>
+                  <option value="1" selected>学習中</option>
+                  <option value="2">得意</option>
+                  <option value="3">完璧</option>
+                  </select></label></p> 
+              </div>
+            </div>
+
+            <div class="c-Input-Form-Inner">
+              <div class="c-Container-Form">
+                <p><label><input type="text" placeholder="単語を入力" name="card_name"></label></p>
+                <p><label>
+                  <input type="text" list="l-Large" id="a-Large" value="" placeholder="大分類を入力" name="large_category_name">
+                    <datalist id="l-Large">
+                    </datalist>
+                </label></p>
+                <p><label>
+                  <input type="text" list="l-Small" id="a-Small" value="" placeholder="小分類を入力" name="small_category_name">
+                    <datalist id="l-Small">
+                    </datalist>
+                </label></p>
+                <p><label><textarea name="note_content" placeholder="ノートを入力"></textarea></label></p>
+              </div>
+              <div class="c-Container-Form">
+                <p><label><input type="text" placeholder="タグ1を入力" name="tag_name_0"></label></p>
+                <p><label><input type="text" placeholder="タグ2を入力" name="tag_name_1"></label></p>
+                <p><label><input type="text" placeholder="タグ3を入力" name="tag_name_2"></label></p>
+                <p><label><input type="text" placeholder="タグ4を入力" name="tag_name_3"></label></p>
+                <p><label><input type="text" placeholder="タグ5を入力" name="tag_name_4"></label></p>
+              </div>
+            </div>
+
+            <div class="c-Input-Form-Inner">
+              <p><input type="submit" class="a-Btn-Base" value="OK"/></p>
+            </div>
+          </form>
+        </div>
+
+        <div id="js-Footer"></div>
+
       </div>
-
-      <div id="js-Footer"></div>
-
     </main>
   </body>
   
